# time-assistant

./: .dockerignore  .gitignore  Dockerfile  Justfile  Makefile  docker-compose.yml  hypercorn.toml  pyproject.toml  requirements.txt
.github/workflows/: docker-push.yml  test-python.yml
app/: env.py  main.py  settings.py
app/models/: interval.py  smartevent.py
app/routes/: auth.py  rest.py  websocket.py
app/services/: calendar.py  deck.py  env.py  logger.py  scheduler.py  websocket_manager.py
tests/: health.py  test_main.py
time-assistant/: server.py
