[project]
name = "time-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "websockets>=14.1",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "pyright>=1.1.390",
]
