[project]
name = "time-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "caldav>=1.4.0",
    "fastapi>=0.115.6",
    "icalendar>=6.1.0",
    "ics>=0.7.2",
    "nextcloud-api-wrapper>=0.2.3",
    "nextcloud-deck>=0.2.1",
    "python-dotenv>=1.0.1",
    "termcolor>=2.5.0",
    "uvicorn>=0.34.0",
    "websockets>=14.1",
    "portion (>=2.6.0,<3.0.0)",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "httpx>=0.28.1",
    "pyright>=1.1.390",
    "pytest>=8.3.4",
]
